<resources>
    <string name="app_name">Big9</string>

    <string-array name="children">
        <item>김개똥</item>
        <item>이은정</item>
        <item>장한나</item>
    </string-array>

    <string-array name="year">
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
    </string-array>


    <string-array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string name="welcome_messages">어서와 %1$s! \n운동할 시간이야!</string>
    <string name="welcome_description">\n\n지금까지 획득한 별 갯수는 %d 개야!\n다음 운동 능력 측정까지 %s 일 남았어!\n오늘도 재밌게 운동 해보자!</string>

    <string name="welcome_none_child">안녕하세요!\n앱을 사용하기 위해\n먼저 메뉴를 열고\n어린이를 등록해주세요!</string>

    <string name="upper_body_strength">상체 근력</string>
    <string name="lower_body_strength">하체 근력</string>
    <string name="core">코어</string>
    <string name="muscle_endurance">근지구력</string>
    <string name="cardiopulmonary_endurance">심폐지구력</string>

    <string name="upper_body_strength_record">상체 근력</string>
    <string name="lower_body_strength_record">하체 근력</string>
    <string name="core_record">코어</string>
    <string name="muscle_endurance_record">근지구력</string>
    <string name="cardiopulmonary_endurance_record">심폐지구력</string>

    <string name="start_button">운동 시작</string>
    <string name="stop_button">운동 종료</string>
    <string name="end_button">운동 그만하기</string>
    <string name="start_exercise">운동 시작을 눌러주세요</string>
    <string name="ready_exercise">운동을 시작해 봐요</string>
    <string name="practice_exercise">먼저 운동 연습을 해볼게요~</string>
    <string name="slow_exercise">영상을 천천히 따라해 봐요!</string>
    <string name="actual_exercise">운동을 바로 따라해 봐요!</string>
    <string name="measure_exercise">1분안에 최대한 많이 해봐!</string>
    <string name="step1_exercise">1단계 운동을 따라해 봐요!</string>
    <string name="step2_exercise">2단계 운동을 따라해 봐요!</string>
    <string name="continuous_exercise">연속 동작을 따라해봐요!</string>
    <string name="fast_continuous_exercise">연속 동작을 빠르게 따라해봐요!</string>
    <string name="walking_on_spot">제자리 걸음을 %d초 동안 걸어봐요</string>
    <string name="rest_exercise">잠깐 쉬어요~</string>
    <string name="core_exercise">자세를 잡은 후 시작버튼을 눌러주세요!</string>

    <string name="none_paired">패어링된 기기가 없습니다.</string>
    <string name="none_found">검색된 기기가 없습니다.</string>
    <string name="title_paired_devices">패어링된 기기 목록</string>
    <string name="title_other_devices">연결 가능한 기기</string>
    <string name="button_scan">기기 검색</string>
    <string name="connect_device">기기 연결</string>

    <string name="facebook_app_id">989860664447609</string>
    <string name="height">신장 (cm)</string>
    <string name="weight">몸무게 (kg)</string>
    <string name="name">이름</string>
    <string name="gender">성별</string>
    <string name="birth">생년월일</string>
    <string name="register">등록</string>
    <string name="cancel">취소</string>
    <string name="child_info">어린이 정보</string>
    <string name="bmi">BMI</string>
    <string name="predict_height">예측 키(cm)</string>
    <string name="recent_exercise_record">최근 운동 기록</string>
    <string name="exercise_start">운동 시작</string>
    <string name="choose_exercise">운동 선택</string>
    <string name="basic_course">기본 코스</string>
    <string name="exercise_measure_start">운동 능력 측정</string>

    <string name="register_child">어린이 등록</string>
    <string name="friend_list">친구 보기</string>
    <string name="alarm_setting">알람 설정</string>
    <string name="record">기록보기</string>

    <string name="physical_data_score">신체 능력 점수</string>
    <string name="calorie_consumption">소비 칼로리</string>


</resources>
