<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        android:background="#e4e4df"
        android:text="@string/title_paired_devices"
        android:textColor="#666"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/paired_devices_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_weight="1.8" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/paired_devices_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:stackFromBottom="true"
        app:layout_constraintBottom_toTopOf="@+id/title_new_devices"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_paired_devices"
        app:layout_constraintVertical_weight="8" />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#e4e4df"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        android:text="@string/title_other_devices"
        android:textColor="#666"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/searched_devices_recycler_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paired_devices_recycler_view"
        app:layout_constraintVertical_weight="1.8" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/searched_devices_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:stackFromBottom="true"
        app:layout_constraintBottom_toTopOf="@+id/button_scan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_new_devices"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/button_scan"
        android:background="@drawable/app_gradient_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/colorMainText"
        android:text="@string/button_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searched_devices_recycler_view"
        app:layout_constraintVertical_weight="2" />

</android.support.constraint.ConstraintLayout>