<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_short">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="5dp"
        android:src="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline5" />

    <ImageView
        android:id="@+id/profile_image_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="26dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image_view"
        app:layout_constraintEnd_toEndOf="@id/profile_image_view"
        app:layout_constraintStart_toStartOf="@id/profile_image_view"
        app:layout_constraintTop_toTopOf="@+id/profile_image_view"
        app:srcCompat="@drawable/ic_child_add" />

    <TextView
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/child_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:background="#DEDEDE"
        android:text="@string/cancel"
        android:textColor="#666"
        android:theme="@style/MainColorDarkButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/child_add_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/child_add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="2dp"
        android:layout_weight="1"
        android:background="#DEDEDE"
        android:text="@string/register"
        android:textColor="#666"
        android:theme="@style/MainColorDarkButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/child_cancel_button" />


    <LinearLayout
        android:id="@+id/birth_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/info_box"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/height_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_text_view">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/birth"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/birth_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:textColor="@color/colorMainText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/height_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:background="@drawable/info_box"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/predict_height_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birth_date_layout">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/height"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/height_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@android:color/transparent"
            android:ems="6"
            android:gravity="end"
            android:inputType="number"
            android:textColor="@color/colorMainText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/predict_height_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:background="@drawable/info_box"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/weight_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_layout">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/predict_height"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/predict_height_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:textColor="@color/colorMainText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weight_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/info_box"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/gender_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/predict_height_layout">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/weight"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:ems="6"
            android:gravity="end"
            android:inputType="number"
            android:textColor="@color/colorMainText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/info_box"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/child_add_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_layout">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/gender"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:gravity="end"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/gender_boy_selector"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio_button_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:button="@drawable/gender_girl_selector" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_button">

        <EditText
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:background="@color/transparent"
            android:text="@string/name"
            android:textColor="#666"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/name_edit_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/ic_pencil" />
    </LinearLayout>

    <ImageView
        android:id="@+id/camera_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@id/profile_image_view"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/profile_image_view"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/ic_photo_button" />

    <TextView
        android:id="@+id/age_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="-years old"
        android:textColor="#666"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_layout" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.72" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />


</android.support.constraint.ConstraintLayout>